WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190712
[GTK] fast/css/pseudo-visited-background-color-on-input.html is failing since
r237425
- Enable the datalist element by default on iOS and macOS
https://bugs.webkit.org/show_bug.cgi?id=190712
Summary
[GTK] fast/css/pseudo-visited-background-color-on-input.html is failing since...
Miguel Gomez
Reported
2018-10-18 08:13:11 PDT
fast/css/pseudo-visited-background-color-on-input.html [ ImageOnlyFailure ] the images can be seen here:
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r237249%20(8526)/fast/css/pseudo-visited-background-color-on-input-diffs.html
The diff is just 4 red pixels in the corners of a rounded rectangle that definitely should not be there.
Attachments
Patch
(5.91 KB, patch)
2018-10-18 09:54 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-10-18 09:54:20 PDT
Created
attachment 352704
[details]
Patch
WebKit Commit Bot
Comment 2
2018-10-18 13:02:56 PDT
Comment on
attachment 352704
[details]
Patch Clearing flags on attachment: 352704 Committed
r237262
: <
https://trac.webkit.org/changeset/237262
>
WebKit Commit Bot
Comment 3
2018-10-18 13:02:58 PDT
All reviewed patches have been landed. Closing bug.
Michael Catanzaro
Comment 4
2018-10-27 18:52:16 PDT
Thanks Wenson! I've just removed the failure expectation.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug